--- a/panscale/Base.lproj/Main.storyboard
+++ b/panscale/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,7 +15,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="mandalorian" translatesAutoresizingMaskIntoConstraints="NO" id="hd5-CT-hgh">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="rE7-S0-1gJ">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hd5-CT-hgh">
                                 <rect key="frame" x="57" y="298" width="300" height="171"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -32,12 +34,18 @@
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="xmark" catalog="system"/>
+                                <state key="normal" image="close"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemGray5Color"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="rE7-S0-1gJ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ZxU-9U-fuD"/>
+                            <constraint firstItem="rE7-S0-1gJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dSB-0C-Ts6"/>
+                            <constraint firstItem="rE7-S0-1gJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oBv-pX-ifi"/>
+                            <constraint firstAttribute="bottom" secondItem="rE7-S0-1gJ" secondAttribute="bottom" id="qd6-5y-V23"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="closeBtn" destination="MZn-1q-ZFG" id="wAk-dU-tC1"/>
@@ -51,11 +59,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bg" width="1000" height="1481"/>
+        <image name="close" width="128" height="128"/>
         <image name="enlarge" width="512" height="512"/>
-        <image name="mandalorian" width="568" height="321"/>
-        <image name="xmark" catalog="system" width="128" height="113"/>
-        <systemColor name="systemGray5Color">
-            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
